kqed_dev4/src/objects/Convio_Product_Order__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Convio Product Orders</relationshipLabel>
        <relationshipName>Convio_Product_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convio_Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Convio Transaction ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Convio Product Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Convio_Transaction_ID__c</columns>
        <columns>Account__c</columns>
        <columns>Purchase_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Convio Product Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Convio Product Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>